# ComfyEndpoints

./: .dockerignore  .gitignore  Makefile  README.md  cend  default_prompt.txt  pyproject.toml
.github/workflows/: build_golden_image.yml
apps/demo/: app.json  app.yaml  workflow.contract.json  workflow.json
apps/flux_text_to_image/: app.json  app.yaml  workflow.contract.json  workflow.json
apps/wanimate/: app.json  workflow.contract.json  workflow.json
comfy_plugin/comfy_endpoints_contract/: SKILL.md  __init__.py  api_contract.py
docker/: Dockerfile.comfybase  Dockerfile.gateway  Dockerfile.golden  comfy_mock_server.py  docker-compose.stack.yml  entrypoint.sh  nginx.compose.conf  nginx.conf
scripts/: load_runpod_api_key.sh  smoke_test_local_stack.sh
src/comfy_endpoints/cli/: main.py
src/comfy_endpoints/contracts/: __init__.py  parser.py  validators.py
src/comfy_endpoints/deploy/: __init__.py  (+3 more)
tests/integration/: test_cend_wrapper.py  test_cli_files_commands.py  test_cli_invoke_dynamic.py  test_cli_jobs_commands.py  test_gateway_file_api.py  test_gateway_job_outputs.py  test_gateway_policies.py
tests/unit/: test_bootstrap_contract_file.py  test_bootstrap_dependency_resolution.py  test_cache_manager.py  test_comfy_client.py  test_comfy_plugin_contract.py  test_contract_parser.py  test_deployment_service.py  test_env_loader.py  test_gateway_output_resolution.py  test_image_resolver_and_manager.py  test_job_store.py  test_predeploy_validator.py  test_prompt_mapper.py  test_runpod_provider_api.py  test_runpod_provider_secrets.py  test_validators.py
(+24 files in other folders)
