[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-endpoints"
version = "0.1.0"
description = "One-click deployment platform for ComfyUI workflows as APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
comfy-endpoints = "comfy_endpoints.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
